deephud-enterprise-food-delivery-platform/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service
  namespace: deephud-prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
      - name: order-service

        image: acrdeephudprod01.azurecr.io/order-service:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
