deephud-enterprise-food-delivery-platform/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: deephud-prod

spec:
  selector:
    app: order-service

  type: LoadBalancer

  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
