deephud-enterprise-food-delivery-platform/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: order-service-ingress
  namespace: deephud-prod

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: order-service
            port:
              number: 80
